# function-grapher

./: .gitignore  CMakeLists.txt  README.md
include/SGF/: Canvas.hpp  InputManager.hpp  Rectangle.hpp  Slider.hpp  Types.hpp
src/: Main.cpp
src/SGF/: Canvas.cpp  InputManager.cpp  Rectangle.cpp  Slider.cpp
